# py-auto-test

./: .gitignore  LICENSE  README.md  TODO.md  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
block-scheme/: scheme_page_1.sdr
code_analysis/: analysis.py  generate_tests.py
code_analysis/example/: sample_code.py
tests/: test_sample_code.py  test_utils.py
