[project]
name = "py-auto-test"
version = "0.1.0"
description = "Automatic test generator for Python code"
readme = "README.md"
license = { text = "MIT" }
dependencies = [
    "pytest>=7.0.0",
    "rich>=12.0.0",
]

[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["code_analysis"]
exclude = ["tests*", "__pycache__*", "block_scheme*"]
